add loading and not found handling on anime page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,13 @@
   color: #fff;
 }
 
-
 body {
+  --success: "#06715a";
+  --warning: "#f60";
+  --info: "#02a9ff";
+  --primary: "#5b58fb";
+  --error: "#d03a52";
   
-  background: #111117
+  
+  background: #111117;  
 }
-
